src/test/ui/generator/no-arguments-on-generators.stderr
error[E0625]: generators cannot have explicit arguments
  --> $DIR/no-arguments-on-generators.rs:14:15
   |
14 |     let gen = |start| { //~ ERROR generators cannot have explicit arguments
   |               ^^^^^^^

error: aborting due to previous error

