src/test/ui/generator/no-arguments-on-generators.rs
#![feature(generators)]

fn main() {
    let gen = |start| { //~ ERROR generators cannot have explicit arguments
        yield;
    };
}
